--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
   <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="/public/pokebola.avif">
+    <link rel="icon" href="/pokebola.avif">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pokédex</title>
   </head>
